# testingscida

./: README.md  pyproject.toml
worker/: worker.py
