[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "age_group_worker"
version = "0.0.1"
description = "Python Agent Worker to classify data items into age groups"
authors = [
    {name = "ATIN Test"},
]
dependencies = [
    "python_dateutil >= 2.9.0",
    "setuptools >= 70.0.0",
    "typing-extensions >= 4.12.0",
    ...
]
requires-python = ">=3.11"

[tool.setuptools]
packages = [
    "age_group_worker"
]
